--- a/css/index.css
+++ b/css/index.css
@@ -239,6 +239,9 @@ i.movie__star{
 /* End newIN */
 
 /* Show Time */
+.showTimes{
+    padding: 75px 0px 0px;
+}
 .showTimes .nav-tabs .nav-link{
     position: relative;
     color: #4a4a4a;
@@ -259,7 +262,7 @@ i.movie__star{
     border: white;
 }
 #myTabShowTime{
-    padding: 45px 0px;
+    padding: 45px 0px 35px;
 }
 .showtime__item{
     margin-bottom: 40px;
@@ -330,10 +333,118 @@ i.movie__star{
 
 /* End Show Time */
 
+/* Coming soon */
+.coming__bg{
+    background: url(/img/slide-3.png);
+    padding-top: 75px;
+    position: relative;
+}
+.coming__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgb(51, 51, 51);
+    opacity: 0.5;
+}
+.coming__bg h2{
+    font-size: 18px;
+    margin-bottom: 40px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color:white;
+    border-bottom: 1px solid #333;
+    padding-bottom: 20px;
+    position: relative
+}
+.coming__bg h2.line::after{
+    width: 125px;
+}
+.coming__detail span{
+    font-size: 14px;
+    color: #ec7532;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.coming__detail h1{
+    font-size: 34px;
+    color: white;
+    letter-spacing: 1px;
+    font-weight: 300;
+}
+.coming__detail p i.fa-star{
+    color: #fbbd61;
+    font-size: 14px;
+    width: 14px;
+}
+.coming__detail .coming__date{
+    font-size: 14px;
+    opacity: .75;
+    color: white;
+    margin-left: 8px;
+    text-transform: initial;
+}
+.coming__detail a{
+    font-size: 12px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    color: #ec7532;
+    transition: all 0.5s;
+    text-decoration: none;
+}
+.coming__detail a:hover{
+    color: #fbbd61;
+}
+.coming__trailer{
+    position: relative;
+}
+.coming__trailer i{
+    position: absolute;
+    display: block;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 80px;
+    height: 80px;
+    line-height: 75px;
+    font-size: 24px;
+    text-align: center;
+    color: white;
+    border: 2px solid #ec7532;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+}
+.coming__trailer:hover  i{
+    transform: translate(-50%, -50%) scale(0.9);
+}
+.coming__list{
+    padding: 55px 0px;
+    background: black;
+}
+.coming__item {
+    text-align: center;
+    cursor: pointer;
+    opacity: 0.35;
+    transition: all 0.5s;
+}
+.coming__item:hover, .coming__item.active{
+    opacity: 1;
+}
+.coming__item img{
+    border-radius: 10px;
+}
+.coming__item h5{
+    font-size: 16px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+.coming__item p{
+    font-size: 14px;
+    opacity: 0.5;
+}
 
-
-
-
+/*End Coming soon */
 
 /* contact */
 .contact{
