--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,35 @@ header p.phoneNumber{
     letter-spacing: 3px;
     text-transform: uppercase;
 }
+.navbar-nav>li>.dropdown-menu{
+    margin-top: 1px;
+    border-radius: 0px;
+    display: block;
+    padding: 0;
+    background: linear-gradient(to right, #fbbd61, #ec7532);
+    border: none;
+    transform: scale(1.1);
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+.navbar-nav>li.dropdown:hover .dropdown-menu{
+    transform: scale(1);
+    opacity: 1;
+    visibility: visible;
+}
+.navbar-nav>li>.dropdown-menu a{
+    text-decoration: none;
+    font-size: 13px;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    padding: 15px 10px;
+    display: block;
+    font-weight: 400;
+    line-height: 0.8em;
+
+}
 
 
 /* CAROUSEL */
