--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 /* GLOBAL */
 html,body{
     font-family: 'Roboto Condensed', sans-serif;
+    scroll-behavior: smooth;
 }
 .line::after{
     content: '';
@@ -83,6 +84,9 @@ header p.phoneNumber{
 
 
 /* CAROUSEL */
+.movieCarousel{
+    position: relative;
+}
 #movieCarousel .carousel-item__overlay{
     width: 100%;
     height: 100%;
@@ -174,7 +178,18 @@ header p.phoneNumber{
     transform: skewX(30deg) translateX(-50%);
     transition: all 0.5s;
 } */
-
+img.scroll{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    z-index: 1;
+    animation: ScrollDown 1.5s infinite;
+}
+@keyframes ScrollDown {
+    0% {left: 50%;}
+    50% {left: 50.5%;}
+    100% {left: 50%;}
+}
 
 /* newIN */
 .newIN{
