--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ html,body{
     left: 0;
     bottom: -1px;
     display: inline-block;
-    transition: all 0.5s;
+    transition: all 0.35s;
 }
 
 /* HEADER */
@@ -350,6 +350,7 @@ i.movie__star{
     color: #4a4a4a;
 
 }
+
 .showtime__list .showtime__length span{
     width: 35px;
     height: 35px;
@@ -358,7 +359,8 @@ i.movie__star{
     text-align: center;
 }
 .showtime__list button.btn-secondary{
-    font-size: 14px;
+    font-size: 13px;
+    padding: 7px 10px;
     letter-spacing: 2px;
     color: #717171;
     background-color: #d8d8d8;
@@ -550,7 +552,7 @@ footer a:hover i{
 footer .copyright{
     margin-top: 50px;
     border-top: 1px solid rgba(255,255,255,.1);
-    padding: 20px 0px;
+    padding: 20px 15px;
     font-size: 14px;
 }
 footer .copyright a:hover{
@@ -563,10 +565,43 @@ footer .copyright a:hover{
     #myTabShowTime img{
         width: 100%;
     }
+    .container {
+        padding: 15px;
+    }
+
+    /* chỉnh showtimes nav-item */
+    .showTimes .nav-tabs .nav-link{
+        font-size: 16px;
+    }
+    .showTimes .nav-tabs .nav-link{
+        font-size: 16px;
+    }
+    .showTimes .nav-tabs .nav-link.line::after{
+        width: 4px;
+        height: 0%;
+        background-image: linear-gradient(to bottom, #fbbd61, #ec7532);        
+    }
+    .showTimes .nav-tabs .nav-link.active.line::after,.showTimes .nav-tabs .nav-link:hover.line::after{
+        height: 100%;
+        width: 4px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
     footer h6{
         font-size: 14px;
     }
+    .showTimes .nav-tabs .nav-link{
+        font-size: 16px;
+    }
 }
+
+/* chỉnh showtimes nav-item cho không bị rớt hàng */
+@media screen and (min-width: 576px) and (max-width: 768px){
+    .showTimes .nav-tabs .nav-link{
+        padding: 10px 20px 15px;
+        font-size: 16px;
+    }
+}
+
+
