--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,33 @@ html,body{
     display: inline-block;
     transition: all 0.35s;
 }
+/* magnific popup video */
+.mfp-fade.mfp-bg {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-bg.mfp-ready {
+	opacity: 0.8;
+}
+.mfp-fade.mfp-bg.mfp-removing {
+	opacity: 0;
+}
+
+.mfp-fade.mfp-wrap .mfp-content {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+	opacity: 1;
+}
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+	opacity: 0;
+}
+/*end magnific popup video */
 
 /* HEADER */
 header{
@@ -182,6 +209,7 @@ img.scroll{
     position: absolute;
     bottom: 0;
     left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
     animation: ScrollDown 1.5s infinite;
 }
