--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,31 @@ html,body{
 }
 /*end magnific popup video */
 
+/* HIDDEN HEADER */
+#hiddenHeader{
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-100%);
+    background: #101010;
+    border: 1px solid #101010;
+    width: 100%;
+    margin-bottom: 20px;
+    max-height: 70px;
+    /* visibility: hidden; */
+    transition: all 0.5s;
+}
+#hiddenHeader nav.navbar img{
+    max-height: 40px;
+    margin: 15px 0;
+}
+#hiddenHeader .navbar-nav li.nav-item a.nav-link{
+    font-size: 12px;
+    
+}
+/*END HIDDEN HEADER */
+
 /* HEADER */
 header{
     position: absolute;
@@ -54,6 +79,7 @@ header{
 header p.phoneNumber{
     font-size: 14px;
 }
+
 #movieNavbar .navbar-nav{
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
@@ -106,7 +132,6 @@ header p.phoneNumber{
     display: block;
     font-weight: 400;
     line-height: 0.8em;
-
 }
 
 
